--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
   
   
 
-  <meta name="author" content="Alice Bighetti (吳恩達)" />
+  <meta name="author" content="Anastasia Safargalieva" />
 
   
   
   
     
   
-  <meta name="description" content="Professor of Artificial Intelligence" />
+  <meta name="description" content="RUDN University student" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://anastasiasafargalieva.github.io/" />
