--- a/404.html
+++ b/404.html
@@ -301,7 +301,7 @@
   <meta property="og:site_name" content="Anastasia Safargalieva" />
   <meta property="og:url" content="https://anastasiasafargalieva.github.io/404.html" />
   <meta property="og:title" content="404 Page not found | Anastasia Safargalieva" />
-  <meta property="og:description" content="Professor of Artificial Intelligence" /><meta property="og:image" content="https://anastasiasafargalieva.github.io/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="RUDN University student" /><meta property="og:image" content="https://anastasiasafargalieva.github.io/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://anastasiasafargalieva.github.io/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
