--- a/index.html
+++ b/index.html
@@ -1497,7 +1497,7 @@
       <div class="card">
         <div class="card-body">
           <div class="d-flex align-content-start">
-            <div class="mr-2 mb-2"><img src="/media/icons/brands/org-gc.svg" width="56px" height="56px" alt="GenCoin"></div>
+            <div class="mr-2 mb-2"><img src="/media/icons/brands/sg.png" width="56px" height="56px" alt="GenCoin"></div>
             <div>
           
 
