--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,13 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p> Anastasia Safargalieva is a master degree student at Aalto University, studying Security and Cloud Computing master program. Her research interests include information security, cloud computing.</p>
+      <p> Anastasia Safargalieva is a master degree student at Aalto University, studying Security and Cloud Computing master program. Her research interests include information security, cloud computing.
+
+      </p>
+      <li>
+        <a href="https://anastasiasafargalieva.github.io/author/AnastasiaSafargalieva/" target="_blank" rel="noopener" aria-label="На русском языке!">
+        </a>
+      </li>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/resume.pdf" target="_blank">resumé</a>.</p>
 
     </div>
