--- a/index.html
+++ b/index.html
@@ -1143,10 +1143,8 @@
       <p> Anastasia Safargalieva is a master degree student at Aalto University, studying Security and Cloud Computing master program. Her research interests include information security, cloud computing.
 
       </p>
-      <li>
-        <a href="https://anastasiasafargalieva.github.io/author/AnastasiaSafargalieva/" target="_blank" rel="noopener" aria-label="На русском языке!">
-        </a>
-      </li>
+      
+    </i> На русском языке <a href="https://anastasiasafargalieva.github.io/author/AnastasiaSafargalieva/" target="_blank">Анастасия Сафаргалиева</a>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/resume.pdf" target="_blank">resumé</a>.</p>
 
     </div>
